# ImageTitan

./: .gitignore  BOM.xlsx  README.md
Components/: 前桥连接.SLDPRT  前桥连接mirror.SLDPRT  后桥连接.3mf  后桥连接.SLDPRT  后桥连接mirror.SLDPRT  四个报轨.SLDPRT  抱轨.SLDPRT  生根板.SLDPRT  电池仓与舵机放置.SLDPRT  相机台.SLDPRT  相机台.gcode.3mf  视场角模拟.SLDPRT
PCB/ChassisControl/: Chassis.PrjPcb  Chassis.SchDoc  Chassis_V1.PcbDoc  Chassis_V2.PcbDoc
PCB/USB_FPC/: USB_FPC.PrjPcb  USB_FPC.PrjPcbStructure  USB_FPC.SchDoc  USB_FPC_Down.PcbDoc  USB_FPC_Up.PcbDoc
PCB/USB_Hub/: USB_Hub.PrjPcb  USB_Hub.PrjPcbStructure  USB_Hub.SchDoc  USB_Hub_V1.PcbDoc  USB_Hub_V2.PcbDoc
Program/ST-MCU/: ImageTitan_New.ioc
Program/ST-MCU/MDK-ARM/: ImageTitan_New.uvguix.31136  ImageTitan_New.uvguix.HRX  ImageTitan_New.uvoptx  ImageTitan_New.uvprojx  JLinkLog.txt  startup_stm32f103xb.lst
lower/: ImageTitan_New.ioc
lower/Core/Inc/: main.h  stm32f1xx_it.h
lower/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c
lower/MDK-ARM/: ImageTitan_New.uvguix.31136  ImageTitan_New.uvoptx  ImageTitan_New.uvprojx  JLinkLog.txt
lower/MainControl/: platformio.ini
model/: 34.82mm.SLDPRT  50mm转向机构杆.SLDPRT  9克微型数字舵机.SLDPRT  MF93ZZ.SLDPRT  stm32f103c8t6-board.SLDPRT  上层板.SLDPRT  底盘板.SLDPRT  电池.SLDPRT  相机安装.SLDPRT  胶轮主动-2.SLDPRT  胶轮从动-2.SLDPRT  舵机驱动.SLDPRT  阿克曼底盘.SLDASM  阿克曼转向机构.SLDASM  阿克曼转向杆.SLDPRT
upper/: README.md
upper/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
upper/log/: latest_build
upper/src/time_synch/: CMakeLists.txt  package.xml
upper/src/time_synch/src/: cap_controller.cpp  timestamp_synch.cpp
(+189 files in other folders)
